Discord bot with kick command completed

--- a/Beginner projects/discordBot/.env
+++ b/Beginner projects/discordBot/.env
@@ -1,1 +1,2 @@
-DISCORD_BOT_TOKEN = MTEzNDIyOTQxNjQ3ODc4OTYzMg.GEV3fK.XvZ8b1xmjJ25jUoCYa7gPtVnuq41OYWA1PI7ks
+DISCORD_BOT_TOKEN = MTEzNDIyOTQxNjQ3ODc4OTYzMg.G774ym.GNfsQrnfeVB-FFcMmZOiSM8j3wGkxgIu3qUmmw
+CLIENT_ID = 1134229416478789632
